crates/wac-parser/tests/resolution/fail/mismatched-enum-cases.wac
import x: interface {
    enum e {
        a,
        c,
        b,
    }
};

let i = new foo:bar { x };
